New entries should be added at the top

2005-07-05 Fixed bug #1231611 in subplots adjust layout.  The problem
           was that the text cacheing mechanism was not using the
           transformation affine in the key. - JDH

2005-07-05 Fixed default backend import problem when using API (SF bug
           # 1209354 -  see API_CHANGES for more info - JDH

2005-07-04 backend_gtk.py: require PyGTK version 2.0.0 or higher - SC

2005-06-30 setupext.py: added numarray_inc_dirs for building against
           numarray when not installed in standard location - ADS


2005-06-27 backend_svg.py: write figure width, height as int, not float.
           Update to fix some of the pychecker warnings - SC
  
2005-06-23 Updated examples/agg_test.py to demonstrate curved paths
           and fills - JDH

2005-06-21 Moved some texmanager and backend_agg tex caching to class
           level rather than instance level - JDH

2005-06-20 setupext.py: fix problem where _nc_backend_gdk is installed to the
           wrong directory - SC

2005-06-19 Added 10.4 support for CocoaAgg. - CM

2005-06-18 Move Figure.get_width_height() to FigureCanvasBase and return
           int instead of float. - SC

2005-06-18 Applied Ted Drain's QtAgg patch: 1) Changed the toolbar to
           be a horizontal bar of push buttons instead of a QToolbar
           and updated the layout algorithms in the main window
           accordingly.  This eliminates the ability to drag and drop
           the toolbar and detach it from the window.  2) Updated the
           resize algorithm in the main window to show the correct
           size for the plot widget as requested.  This works almost
           correctly right now.  It looks to me like the final size of
           the widget is off by the border of the main window but I
           haven't figured out a way to get that information yet.  We
           could just add a small margin to the new size but that