@@ -1,5 +1,14 @@
 
-API Changes in matplotlib-0.82.1
+API Changes in matplotlib-0.83
+
+  Made HOME/.matplotlib the new config dir where the matplotlibrc
+  file, the ttf.cache, and the tex.cache live.  The new default
+  filenames in .matplotlib have no leading dot and are not hidden.
+  Eg, the new names are matplotlibrc tex.cache ttffont.cache.  This is
+  how ipython does it so it must be right.
+
+           If old files are found, a warning is issued and they are
+           moved to the new location.
 
   backends/__init__.py no longer imports new_figure_manager,
   draw_if_interactive and show from the default backend, but puts
