@@ -82,15 +82,9 @@ data.extend(glob.glob('images/*.xpm'))
 data.extend(glob.glob('images/*.svg'))
 data.extend(glob.glob('images/*.png'))
 data.extend(glob.glob('images/*.ppm'))
-data.append('.matplotlibrc')
+data.append('matplotlibrc')
 
 data_files=[('share/matplotlib', data),]
-
-# Bundle the CocoaAgg nib only if on a mac
-if sys.platform == 'darwin':
-    data_files.append(('share/matplotlib/Matplotlib.nib',
-                       glob.glob('lib/matplotlib/backends/Matplotlib.nib/*.nib')))
-
 
 # Figure out which array packages to provide binary support for
 # and define the NUMERIX value: Numeric, numarray, or both.
